# Sigmora

./: .gitignore  Dockerfile  README.md  README_ru.md  auth.py  config.py  database.py  docker-compose.yaml  guide_sigmora.md  models.py  pyproject.toml  routes.py  tasks.py  test_api.http
