[project]
name = "sigmora"
version = "0.1.0"
description = "A scalable notification service with FastAPI, MongoDB, and Celery"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "GendByteMaster", email = "GendByteMaster@gmail.com"}
]
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "motor==3.6.0",
    "pymongo>=4.9,<4.10",
    "python-jose==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.12",
    "celery==5.4.0",
    "redis==5.0.8",
]

[project.scripts]
start-api = "uvicorn:run"
start-celery = "celery:worker"
start-celery-beat = "celery:beat"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"